--- a/templates/about/contact.html
+++ b/templates/about/contact.html
@@ -54,8 +54,8 @@
         <h2>Contact</h2>
         <a name="teachers"><h4>Ik ben een docent, coach of ouder, hoe kan ik de site met mijn leerlingen gebruiken?</h4></a>
         <p>
-            Allereerst heb je zelf een account nodig om in te kunnen loggen op de Khan Academie. Dus <a href="/login">login</a> of <a href="https://www.google.com/accounts/NewAccount">vraag een account aan</a>. 
-            Zodra je bent ingelogd op de Khan Academie, kun je je door leerlingen laten toevoegen als coach.
+            Allereerst heb je zelf een account nodig om in te kunnen loggen op de Iktel. Dus <a href="/login">login</a> of <a href="https://www.google.com/accounts/NewAccount">vraag een account aan</a>. 
+            Zodra je bent ingelogd op de Iktel, kun je je door leerlingen laten toevoegen als coach.
         </p>
         <p>
             Volgende stap: je leerlingen hebben ook een account nodig. Leerlingen ouder dan 13 jaar kunnen zelf een Google account aanvragen. Is een leerling nog geen 13 jaar, dan heb je twee opties: 
@@ -66,7 +66,7 @@
         </p>
         <a name="schools"><h4>Ik wil graag een pilot doen op onze school, kan dat?</h4></a>
         <p>
-            Allereerst hartelijk dank voor de interesse in de Khan Academie. We zijn momenteel al bezig met een aantal pilot-projecten, maar zijn erg benieuwd naar meer ervaringen "in het veld". Gebruik onderstaand formulier om aan te melden voor een pilot en we nemen contact op.
+            Allereerst hartelijk dank voor de interesse in de Iktel. We zijn momenteel al bezig met een aantal pilot-projecten, maar zijn erg benieuwd naar meer ervaringen "in het veld". Gebruik onderstaand formulier om aan te melden voor een pilot en we nemen contact op.
         </p>
         <h4>Kunnen wij iets voor jou doen of wil je ons helpen?</h4>
 		<p>Laat het ons weten.</p>
@@ -88,7 +88,7 @@
 	<div class="clear"></div>
 	<div class="clear"></div>
 	<div class="clear"></div>
-	<div style="text-align:center;"><p>De Nederlandse Khan Academie zou niet bestaan zonder de hulp, tijd, energie en expertise van de vele vrijwilligers<!--<a href="/contribute/credits">vrijwilligers</a>-->.</p></div>
+	<div style="text-align:center;"><p>De Nederlandse Iktel zou niet bestaan zonder de hulp, tijd, energie en expertise van de vele vrijwilligers<!--<a href="/contribute/credits">vrijwilligers</a>-->.</p></div>
 
     <p>&nbsp;</p>
 </div>
