--- a/templates/about/gettingstarted.html
+++ b/templates/about/gettingstarted.html
@@ -89,7 +89,7 @@
         <li>{{ youtube.jump_link("Een persoonlijk profiel, punten en badges om het leerrendement (leertempo en resultaat) bij te houdem.", 208) }} </li>
     </ol><br/>
     <h2>Hoe werkt Khan voor studiebegeleiders, ouders en leerkrachten?</h2>
-    <p>Met de Khan Academie hebben studiebegeleiders, ouders en leerkrachten helder zicht op wat leerlingen leren en doen.</p>
+    <p>Met de Iktel hebben studiebegeleiders, ouders en leerkrachten helder zicht op wat leerlingen leren en doen.</p>
     <ol>
         <li>{{ youtube.jump_link("Een gedetailleerd overzicht van de vorderingen van elke afzonderlijke leerling", 341) }}</li>
         <li>{{ youtube.jump_link("Actuele rapportage over alle leerlingen", 490) }}</li>
@@ -104,7 +104,7 @@
         <p class="justify">
             Onze <a href="/#browse">collectie video's</a> omvat op dit moment vooral <strong>rekenen en wiskunde</strong>. Elke video is een les van tussen de vijf en tien minuten waarin uitleg wordt gegeven over één onderwerp. 
             Geïnspireerd door de video's van Salman Khan en zijn woorden: 'Ik geef les zoals ik zelf les had willen krijgen. De lessen komen van mij en ik ben een levensecht mens die gefascineerd is door de wereld om hem heen.'
-            Voor onze website willen wij graag dat iedereen die denkt een bijdrage te kunnen leveren in het onderwijs via de Khan Academie die kans krijgt. Bij <a href="http://www.khanacademie.nl/helpmee">draag bij</a> kun je zien hoe ook jij van betekenis kunt zijn voor de Khan Academie.</em><br/>
+            Voor onze website willen wij graag dat iedereen die denkt een bijdrage te kunnen leveren in het onderwijs via de Iktel die kans krijgt. Bij <a href="http://www.khanacademie.nl/helpmee">draag bij</a> kun je zien hoe ook jij van betekenis kunt zijn voor de Iktel.</em><br/>
             &mdash;
         </p>
     </div>
@@ -130,7 +130,7 @@
     <div class="col1 sixty-forty right">
         <h2>Actuele volgsystemen</h2>
         <p class="justify">
-        De Khan Academie houdt precies bij wat je doet en welke vorderingen je maakt wanneer je met de Khan Academie werkt. Al deze gegevens zijn persoonlijk en worden als zodanig behandeld. Er zijn wel heldere overzichten beschikbaar voor elke gebruiker en zijn begeleider (of coach). Wanneer je erom vraagt, krijg je meteen informatie over alles wat je hebt geleerd en de resultaten die hebt behaald. Je kunt alle informatie opvragen van het totaal aan activiteiten tot aan individuele oefeningen. Je vindt <strong>echte informatie over je voortgang en je toename van kennis</strong> over bijvoorbeeld wiskunde. 
+        De Iktel houdt precies bij wat je doet en welke vorderingen je maakt wanneer je met de Iktel werkt. Al deze gegevens zijn persoonlijk en worden als zodanig behandeld. Er zijn wel heldere overzichten beschikbaar voor elke gebruiker en zijn begeleider (of coach). Wanneer je erom vraagt, krijg je meteen informatie over alles wat je hebt geleerd en de resultaten die hebt behaald. Je kunt alle informatie opvragen van het totaal aan activiteiten tot aan individuele oefeningen. Je vindt <strong>echte informatie over je voortgang en je toename van kennis</strong> over bijvoorbeeld wiskunde. 
         </p>
     </div>
     <div class="col2 sixty-forty screenshot">
@@ -146,7 +146,7 @@
         <h2>De kenniskaart</h2>
         <p class="justify">
             <img class="rounded-background" src="/images/screenshot-tour/challenges-small.png" style="float:right;margin-left:20px;"/>
-            <a href="/exercisedashboard">De kenniskaart</a> laat al al onze oefeningen. Je kunt <strong>in- en uitzoomen en rondneuzen</strong> in alle verschillende oefeningen, net als bij een gewone kaart. Je kunt op elke gewenste plek beginnen aan de oefeningen. De Khan Academie adviseert je over de oefeningen die het meest geschikt zijn. Je krijgt ook een seintje als het raadzaam is om oefeningen te gaan herhalen.<br/><br/>
+            <a href="/exercisedashboard">De kenniskaart</a> laat al al onze oefeningen. Je kunt <strong>in- en uitzoomen en rondneuzen</strong> in alle verschillende oefeningen, net als bij een gewone kaart. Je kunt op elke gewenste plek beginnen aan de oefeningen. De Iktel adviseert je over de oefeningen die het meest geschikt zijn. Je krijgt ook een seintje als het raadzaam is om oefeningen te gaan herhalen.<br/><br/>
             Als je de kenniskaart helemaal uitzoomt, vind je al onze uitdagingen waarbij een aantal kleinere oefeningen met elkaar in verband worden gebracht. Wanneer je alle oefeningen succesvol gemaakt hebt beheers je de wiskunde. <br/><br/>
             
             Wij zullen nieuwe oefeningen blijven toevoegen aan de kenniskaart.
@@ -175,7 +175,7 @@
         <h2>Badges waar je trots op kunt zijn</h2>
         <p class="justify">
             <img class="rounded-background" src="/images/screenshot-tour/badges-3.png" style="width:228px;float:right;margin-left:20px;"/>
-            Khan Academie bevat volop game-elementen. Zodra je inlogt, ga je badges en punten verdienen met je activiteiten. Hoe meer jij jezelf uitdaagt, des te meer verdien je om trots op te zijn.<br/><br/>
+            Iktel bevat volop game-elementen. Zodra je inlogt, ga je badges en punten verdienen met je activiteiten. Hoe meer jij jezelf uitdaagt, des te meer verdien je om trots op te zijn.<br/><br/>
             Een aantal van de kleinere badges zijn makkelijk te verdienen, <a href="/badges/view">de meest waardevolle badges</a> vergen meer oefening en soms jarenlange inspanning.
         </p>
     </div>
