--- a/templates/badges/create_custom_badge.html
+++ b/templates/badges/create_custom_badge.html
@@ -45,7 +45,7 @@
                         <td style="font-weight:bold;">Volledige Beschrijving</td>
                         <td style="padding-bottom:9px;">
                             <textarea name="full_description" rows="5" cols="40"></textarea><br/>
-                            <em>Een uitgebreide beschrijving van hoe en waarom de gebruiker de badge heeft verdiend, meestal in de tegenwoordige tijd. <br/>Voorbeelden: "Verdien 100,000 energie punten," "Blijf 3 jaar lid van Khan Academie," "Wordt gevorderd in 25 vaardigheden."</em>
+                            <em>Een uitgebreide beschrijving van hoe en waarom de gebruiker de badge heeft verdiend, meestal in de tegenwoordige tijd. <br/>Voorbeelden: "Verdien 100,000 energie punten," "Blijf 3 jaar lid van Iktel," "Wordt gevorderd in 25 vaardigheden."</em>
                         </td>
                     </tr>
 
