--- a/templates/coach_resources/toolkit_content/first-week.html
+++ b/templates/coach_resources/toolkit_content/first-week.html
@@ -8,15 +8,15 @@
 	<p> Het doel van is dat leraren Khan 
 Academie gaan gebruiken in de klas. 
 Leraren en leerlingen gaan dus  
-werken met Khan Academie. De leraar 
+werken met Iktel. De leraar 
 wordt coach van zijn klas en zal (een 
 deel van) zijn lesmateriaal opnemen 
-op video en op Khan Academie 
+op video en op Iktel 
 plaatsen. Leerlingen kunnen deze 
 video's online bekijken en kunnen aan 
 de slag met de oefeningen op het 
 gebied van rekenen en wiskunde die 
-op Khan Academie beschikbaar zijn. <br>
+op Iktel beschikbaar zijn. <br>
 <br>
 U kunt in principe gewoon zelfstandig 
 aan de slag gaan. Voor 
