--- a/templates/coach_resources/toolkit_content/how-to-use-this-toolkit.html
+++ b/templates/coach_resources/toolkit_content/how-to-use-this-toolkit.html
@@ -5,16 +5,16 @@
 	<h1>Hoe gebruik ik de toolkit?</h1>
 	<hr>
 		
-	<p class="lead">Als je Khan Academie in jouw klas of jouw school wilt gebruiken, staan onze middelen vrij tot je beschikking.</p> 
+	<p class="lead">Als je Iktel in jouw klas of jouw school wilt gebruiken, staan onze middelen vrij tot je beschikking.</p> 
 	
-	<p>Khan Academie kan op verschillende, creatieve manieren gebruikt worden. Wij horen heel graag hoe jouw gebruik jouw leerlingen helpt te leren. Wij willen in onze toolkit graag ervaringen van scholen en leraren verzamelen die met de Khan Academie op school werken. Hiermee kunnen andere leraren en coaches inspiratie en ideeën opdoen over hoe zij zelf de Khan Academie in de klas kunnen gebruiken. Tot wij onze gereedschapskist kunnen vullen met ervaringen uit Nederland kun je lezen over Amerikaanse ervaringen op scholen met de Khan Academy. Wanneer jij methoden ontdekt die voor jou werken, horen wij daar graag over. Wij zijn er dan ook heel blij mee als je deze toevoegt aan onze <a href="{{base_url}}/teacher-faqs">FAQs</a>!</p> 
+	<p>Iktel kan op verschillende, creatieve manieren gebruikt worden. Wij horen heel graag hoe jouw gebruik jouw leerlingen helpt te leren. Wij willen in onze toolkit graag ervaringen van scholen en leraren verzamelen die met de Iktel op school werken. Hiermee kunnen andere leraren en coaches inspiratie en ideeën opdoen over hoe zij zelf de Iktel in de klas kunnen gebruiken. Tot wij onze gereedschapskist kunnen vullen met ervaringen uit Nederland kun je lezen over Amerikaanse ervaringen op scholen met de Khan Academy. Wanneer jij methoden ontdekt die voor jou werken, horen wij daar graag over. Wij zijn er dan ook heel blij mee als je deze toevoegt aan onze <a href="{{base_url}}/teacher-faqs">FAQs</a>!</p> 
 
-	<p>Afhankelijk van hoe jij van plan bent de Khan Academie in jouw klas te gaan gebruiken, zullen verschillende delen van de toolkit voor jou nuttig zijn.</p>
+	<p>Afhankelijk van hoe jij van plan bent de Iktel in jouw klas te gaan gebruiken, zullen verschillende delen van de toolkit voor jou nuttig zijn.</p>
 	
 
 	
 	
-	<p><strong>Geïndividualiseerde modellen:</strong> Gedurende de pilot gebruiken sommige leraren de Khan Academie op een geïndividualiseerde manier. Dat wil zeggen dat leraren eigen lesmateriaal op de Khan Academie zullen plaatsen en hun leerlingen daarmee zullen laten werken. </p>
+	<p><strong>Geïndividualiseerde modellen:</strong> Gedurende de pilot gebruiken sommige leraren de Iktel op een geïndividualiseerde manier. Dat wil zeggen dat leraren eigen lesmateriaal op de Iktel zullen plaatsen en hun leerlingen daarmee zullen laten werken. </p>
 	<p><strong>Toekomstige modellen:</strong> We willen graag samenwerken met leraren die de uitdaging aan willen gaan om met vernieuwende methodes in het onderwijs aan de slag te gaan. De mogelijkheden zijn oneindig, maar onderwerpen die wij hopen terug te zien zijn ideeën over:</p>
 		<ul class="bullet"> 
 			<li>Gemengde (leeftijds)klassen</li>
@@ -23,7 +23,7 @@
 			<li>Les geven door het combineren van disciplines</li>
 		</ul>
 
-	<p>Wanneer je geïnteresseerd bent in het gebruik van de Khan Academie voor dergelijke doeleinden <a href="https://docs.google.com/a/khanacademie.nl/spreadsheet/viewform?formkey=dFZYRWdsSnJYakF4a1dyYm92UUh3dmc6MQ#gid=0"> meld je dan hier aan</a>.</p>
+	<p>Wanneer je geïnteresseerd bent in het gebruik van de Iktel voor dergelijke doeleinden <a href="https://docs.google.com/a/khanacademie.nl/spreadsheet/viewform?formkey=dFZYRWdsSnJYakF4a1dyYm92UUh3dmc6MQ#gid=0"> meld je dan hier aan</a>.</p>
 
 	<p><a href="{{base_url}}/toolkit-sections" class="call-to-action simple-button green">Volgende: Toolkit onderdelen →</a></p>
 
@@ -34,7 +34,7 @@
 <div class="callout">
 	<h3>Handige links</h3>
 	<ul class="bullet">
-		<li><a href="http://khanacademy.desk.com/customer/portal/articles/414175-what-is-the-vision-of-khan-academy-in-the-classroom-">Wat is de visie van Khan Academie in de klas?</a></li>
+		<li><a href="http://khanacademy.desk.com/customer/portal/articles/414175-what-is-the-vision-of-khan-academy-in-the-classroom-">Wat is de visie van Iktel in de klas?</a></li>
 		
 </div>
 {% endblock col2content %}	
