--- a/templates/coach_resources/toolkit_content/technology.html
+++ b/templates/coach_resources/toolkit_content/technology.html
@@ -4,16 +4,16 @@
 		
 	<h1>Technologie</h1>
 	<hr>
-	<p class="lead">Voor het gebruik van Khan Academie is allen een internetverbinding en een moderne webbrowser nodig.</p>
+	<p class="lead">Voor het gebruik van Iktel is allen een internetverbinding en een moderne webbrowser nodig.</p>
 	
-	<p>Khan Academie is op alle browsers te gebruiken. Voor Internet Explorer is het gebruik van één van de laatste twee versies vereist. </p>
+	<p>Iktel is op alle browsers te gebruiken. Voor Internet Explorer is het gebruik van één van de laatste twee versies vereist. </p>
 	
 	<h3>Log-in / accounts</h3>
 	<p>Als je veel accounts wilt gebruiken, raden wij het gebruik van Google Apps for Education aan (uitgelegd op de pagina van <a href="/toolkit/setting-up-accounts">een klas opstarten</a>)</p>
 	<p>Op dit moment is het alleen mogelijk om met een Google- of Facebookaccount aan te melden. In de toekomst zal dit uitgebreid worden.</p>
 	
 	<h3>Computers en apparaten</h3>
-	<p>Om Khan Academie te gebruiken is geen speciale software vereist. Het platform kan gebruikt worden op laptops, Notebooks, Netbooks, pc's, macs of tablets.</p>
+	<p>Om Iktel te gebruiken is geen speciale software vereist. Het platform kan gebruikt worden op laptops, Notebooks, Netbooks, pc's, macs of tablets.</p>
 	
 	<h3>Internetverbinding</h3>
 	<p>Je hebt alleen een internetverbinding nodig. 1,5 MBps is de minimale vereiste. Voor het afspelen van video's raden wij een hogere internetverbinding aan.<p>
