--- a/templates/coach_resources/view_resources.html
+++ b/templates/coach_resources/view_resources.html
@@ -74,7 +74,7 @@
         </div>
         <div class="bigcallout span6 offset1">
             <h2>Geef jouw klas een boost</h2>
-            <p>Bezoek onze toolkit voor leraren en ontdek alle geweldige dingen die andere leraren en coaches doen met de Khan Academie.
+            <p>Bezoek onze toolkit voor leraren en ontdek alle geweldige dingen die andere leraren en coaches doen met de Iktel.
             <p>We willen onze coaches graag eerste rangs middelen bieden. Gratis. Altijd. Uitgebreide informatie en inhoudelijke analyses zijn slechts het begin.</p>
             <p><a href="/toolkit/" class="simple-button green">Ontdek de toolkit</a></p>
         </div>
@@ -103,7 +103,7 @@
                 </a>
             </div>
             <h3><a href="http://khanacademy.desk.com">Jouw vragen</a></h3>
-            <p>Vind- en geef antwoord op veelgestelde vragen als: <a href="http://www.khanacademie.nl/about/faq"><br>Wat is de Khan Academie? </a> <br> Of, <a href="http://www.khanacademie.nl/about/faq">voeg je eigen vragen toe</a>. <br>(Wordt aangevuld)
+            <p>Vind- en geef antwoord op veelgestelde vragen als: <a href="http://www.khanacademie.nl/about/faq"><br>Wat is de Iktel? </a> <br> Of, <a href="http://www.khanacademie.nl/about/faq">voeg je eigen vragen toe</a>. <br>(Wordt aangevuld)
         </div>
 
         <div class="span3">
