--- a/templates/contribute.html
+++ b/templates/contribute.html
@@ -18,7 +18,7 @@
 {% block pagecontent %}
     <article id="contribute">
         <div class="col1 sixty-forty">
-            <h2 class="section-headline">Help ook mee met de Khan academie.</h2>
+            <h2 class="section-headline">Help ook mee met de Iktel.</h2>
 
             <p>
                 Zonder de hulp van docenten en andere vrijwilligers zouden we niet zover zijn gekomen als dat we nu
@@ -112,12 +112,12 @@
                     Een filmpje maken is niet moeilijk, maar je moet wel de volgende benodigdheden hebben:<br>
                     1. Een computer of tablet met internettoegang<br>
                     2. Een microfoon (vaak ingebouwd in een laptop)<br>
-                    3. YouTube account (login kan met je Google account die je ook nodig hebt voor de Khan Academie)<br>
+                    3. YouTube account (login kan met je Google account die je ook nodig hebt voor de Iktel)<br>
                     We werken met de website <a href="www.screencast-o-matic.com">www.screencast-o-matic.co</a>. Zij bieden gratis software waarmee je filmpjes
                     kunt maken van wat er op je beeldscherm gebeurt. Hierbij komt je eigen gezicht ook niet in beeld,
                     alleen je stem en de aantekeningen in het tekenprogramma Paint worden opgenomen.<br><br>
 
-                    Hieronder volgt een instructiefilmpje voor het maken van filmpjes voor de Khan Academie.<br>
+                    Hieronder volgt een instructiefilmpje voor het maken van filmpjes voor de Iktel.<br>
 
                     <object width="425" height="350">
                         <param name="movie" value="http://www.youtube.com/v/q1ho0Q10wWA">
@@ -141,7 +141,7 @@
                 <h3><b>Deel je ervaringen</b></h3>
 
                 <div>
-                    <p>Maak je ook gebruik van Khan academie? Deel dan je ervaringen met ons. Het maakt niet uit of je
+                    <p>Maak je ook gebruik van Iktel? Deel dan je ervaringen met ons. Het maakt niet uit of je
                         het thuis of in de klas gebruikt, wij zijn erg benieuwd naar de ervaringen van onze gebruikers.
                         Lees bijvoorbeeld de ervaringen van Jan Knuivers op <a href="http://blog.khanacademie.nl"
                                                                                target="_blank">blog.khanacademie.nl</a>
@@ -167,11 +167,11 @@
                 <h2>Verspreid het woord!</h2>
 
                 <p>
-                    Door anderen te vertellen over de Khan Academie help je ons ook.
+                    Door anderen te vertellen over de Iktel help je ons ook.
                     De eerste enthousiaste gebruikers zijn er, er zijn zelfs al scholen die er gebruik van maken, maar
                     er is eigenlijk geen enkele reden waarom
-                    niet heel Nederland leert met behulp van de Khan Academie.
-                    Vertel je netwerk over de kracht, het nut en de mogelijkheden van de Khan Academie.
+                    niet heel Nederland leert met behulp van de Iktel.
+                    Vertel je netwerk over de kracht, het nut en de mogelijkheden van de Iktel.
                 </p>
 
                 <p>
@@ -197,7 +197,7 @@
             <hr>
             <div style="text-align:center; padding-bottom: 18px;">
                 <p>
-                    De Nederlandse Khan Academie zou niet bestaan
+                    De Nederlandse Iktel zou niet bestaan
                     zonder de hulp, tijd, energie en expertise van de vele vrijwilligers.
                 </p>
             </div>
