--- a/templates/new_homepage.html
+++ b/templates/new_homepage.html
@@ -94,11 +94,11 @@
                 </iframe> --> <!-- src="http://www.youtube.com/embed/ewsvvVtVfmo" -->
             </div>
             <div class='open-source-blurb' style="display: inline-block; background:white; width: 460px;">
-              <h4 style="color:orange; font-family:Raleway;font-size: 1.4em">Khan Academie <strong>open source</strong></h4>
+              <h4 style="color:orange; font-family:Raleway;font-size: 1.4em">Iktel <strong>open source</strong></h4>
               <p style="color:black; font-family:Raleway; letter-spacing: 1.5px; font-size: 1em">
-                De Khan Academie is volledig open source. Dit betekent dat elke enthousiasteling kan meewerken aan dit platform.
-                Wij willen graag dat deze Nederlandse Khan Academie groeit met behulp van een community van programmeurs en leraren.
-                Hierdoor kan de Khan Academie gratis blijven voortbestaan en wordt deze eigendom en ontwikkeld volgens de visie 
+                De Iktel is volledig open source. Dit betekent dat elke enthousiasteling kan meewerken aan dit platform.
+                Wij willen graag dat deze Nederlandse Iktel groeit met behulp van een community van programmeurs en leraren.
+                Hierdoor kan de Iktel gratis blijven voortbestaan en wordt deze eigendom en ontwikkeld volgens de visie 
                 van de onderwijs community.</p>
                 <a href="https://github.com/PerceptumNL/KhanLatest">U kunt de code vinden in <strong>GitHub</strong></a>
             </div>
