--- a/templates/new_page_footer.html
+++ b/templates/new_page_footer.html
@@ -17,7 +17,7 @@
         <ul>
           <li>Over Ons</li>
           <li><a href="/about">Onze Missie en Visie</a></li>
-          <li><a href="/stichting">Stichting Khan Academie</a></li>
+          <li><a href="/stichting">Stichting Iktel</a></li>
           <li><a href="/voorleraren">Hoe werkt het?</a></li>
           <!-- <li><a href="http://blog.khanacademie.nl">Blog</a></li> -->
         </ul>
@@ -56,7 +56,7 @@
     <div class="inner">
       <div id="copyright" class="tiny" title="Version: {{ App.version|escape }}">
         <small>
-            &#0169;2013 Khan Academie, Khan Academie is geïnspireerd door, maar volledig onafhankelijk van de Khan Academy.&#0153;
+            &#0169;2013 Iktel, Iktel is geïnspireerd door, maar volledig onafhankelijk van de Khan Academy.&#0153;
         </small>
         <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/3.0/us/"
            id="creative-commons-link"></a>
