--- a/templates/nl-content/about.html
+++ b/templates/nl-content/about.html
@@ -64,12 +64,12 @@
 			<div class="col2 forty-sixty" style="max-width:81%; text-align: justify;">
 				<h2 class="main-headline" style="white-space: pre;">Gratis onderwijs voor iedereen.</h2>
 					<p>
-						De Khan Academie is een organisatie zonder winstoogmerk en met een bijzondere missie. 
-						Het doel van de Khan Academie is het onderwijs wereldwijd te verbeteren door het verstrekken van gratis onderwijs aan iedereen, overal. 
+						De Iktel is een organisatie zonder winstoogmerk en met een bijzondere missie. 
+						Het doel van de Iktel is het onderwijs wereldwijd te verbeteren door het verstrekken van gratis onderwijs aan iedereen, overal. 
 					</p>
 					<p>
 						Al het materiaal op de site is voor iedereen beschikbaar of je nu student, leraar, thuisstudent, schoolleider of een tweedekanser bent, die na twintig jaar weer naar school wil, of een vriendelijk buitenaards wezen dat op deze manier voet aan de grond probeert te krijgen op aarde. 
-						Al het materiaal van de Khan Academie en alle hulpmiddelen die wij hebben zijn kosteloos beschikbaar voor iedereen.
+						Al het materiaal van de Iktel en alle hulpmiddelen die wij hebben zijn kosteloos beschikbaar voor iedereen.
 					</p>
 			</div>
 		<div class="clear"></div>
@@ -89,7 +89,7 @@
 					<li>{{ youtube.jump_link("Een persoonlijk profiel, punten en badges om het leerrendement (leertempo en leerresultaat) bij te houden.", 208) }} </li>
 				</ol><br/>
 				<h2>Hoe werkt Khan voor studiebegeleiders, ouders en leerkrachten?</h2>
-				<p>Bij de Khan Academie hebben studiebegeleiders, ouders en leerkrachten meer dan ooit zicht op wat hun studenten leren en wat zij doen.</p>
+				<p>Bij de Iktel hebben studiebegeleiders, ouders en leerkrachten meer dan ooit zicht op wat hun studenten leren en wat zij doen.</p>
 				<ol>
 					{% if gandalf_production_test %}
 					<li>{{ youtube.jump_link("Een gedetailleerd overzicht van de vorderingen van elke student.", 341) }}</li>
@@ -136,7 +136,7 @@
 				<div class="col1 sixty-forty right">
 					<h2>Actuele volgsystemen</h2>
 					<p class="justify">
-					De Khan Academie houdt precies bij wat je doet en wat je vorderingen zijn, op elk moment dat je achter je computer zit. Al deze gegevens zijn persoonlijk en worden als zodanig behandeld, maar er zijn heldere overzichten beschikbaar voor elke gebruiker en zijn begeleider. Zodra je erom vraagt, krijg je <strong>ogenblikkelijk informatie over alles wat je hebt geleerd</strong> en de resultaten die je hebt behaald.</br></br>
+					De Iktel houdt precies bij wat je doet en wat je vorderingen zijn, op elk moment dat je achter je computer zit. Al deze gegevens zijn persoonlijk en worden als zodanig behandeld, maar er zijn heldere overzichten beschikbaar voor elke gebruiker en zijn begeleider. Zodra je erom vraagt, krijg je <strong>ogenblikkelijk informatie over alles wat je hebt geleerd</strong> en de resultaten die je hebt behaald.</br></br>
 					Je kunt alle informatie krijgen die je maar wilt over het totaal van je activiteiten tot en met elke oefening die je ooit hebt gemaakt. Je vindt <strong>harde gegevens over de toename in je kennis</strong> van bijvoorbeeld wiskunde.
 					</p>
 				</div>
@@ -153,7 +153,7 @@
 					<h2>De kenniskaart</h2>
 					<p class="justify">
 						<img class="rounded-background" src="/images/screenshot-tour/challenges-small.png" style="float:right;margin-left:20px;"/>
-						<a href="/exercisedashboard">De kenniskaart</a> toont je al onze oefeningen. Je kunt <strong>in- en uitzoomen en rondneuzen</strong> in al die verschillende oefeningen, net als bij een gewone kaart. Je kunt op elke plek beginnen met je oefeningen. De Khan Academie geeft suggesties over de oefeningen die het meest geschikt voor je zijn. We geven je ook een seintje als we je adviseren om te gaan herhalen.</br></br>
+						<a href="/exercisedashboard">De kenniskaart</a> toont je al onze oefeningen. Je kunt <strong>in- en uitzoomen en rondneuzen</strong> in al die verschillende oefeningen, net als bij een gewone kaart. Je kunt op elke plek beginnen met je oefeningen. De Iktel geeft suggesties over de oefeningen die het meest geschikt voor je zijn. We geven je ook een seintje als we je adviseren om te gaan herhalen.</br></br>
 						<strong>Als je de kenniskaart kenniskaart helemaal uitzoomt</strong>, vind je onze uitdagingen waarbij een aantal kleinere oefeningen met elkaar in verband worden gebracht. Als je alle uitdagende oefeningen hebt gemaakt beheers je de wiskunde.
 						<br/><br/>
 						We zorgen ervoor dat er steeds nieuwe oefeningen bij komen.
