--- a/templates/nl-content/videos.html
+++ b/templates/nl-content/videos.html
@@ -21,7 +21,7 @@
 				<li style="font-size:14px;">een microfoon</li>
 				<li style="font-size:14px;">muis of tekentablet</li>
 				<li style="font-size:14px;">Paint of ander tekenprogramma</li>
-				<li style="font-size:14px;">YouTube account (login kan met Google account, wat je ook nodig hebt voor Khan Academie)</li>
+				<li style="font-size:14px;">YouTube account (login kan met Google account, wat je ook nodig hebt voor Iktel)</li>
 				</ul>
 			</p>
 			<p>
@@ -64,7 +64,7 @@
 	<div class="clear"></div>
     <hr>	
 
-    <div style="text-align:center; padding-bottom: 18px;"><p>De Nederlandse Khan Academie zou niet bestaan zonder de hulp, tijd, energie en expertise van de vele vrijwilligers<!--<a href="/contribute/credits">vrijwilligers</a>-->.</p></div>
+    <div style="text-align:center; padding-bottom: 18px;"><p>De Nederlandse Iktel zou niet bestaan zonder de hulp, tijd, energie en expertise van de vele vrijwilligers<!--<a href="/contribute/credits">vrijwilligers</a>-->.</p></div>
 </article>
 {% endblock pagecontent %}
 {% block bottompagescript %}
