--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -57,7 +57,7 @@
     <![endif]-->
     {{ app.globals(username, is_mobile_capable, logged_in_user_profile, user_data, server_time) }}
 
-    <title>{% block meta_page_title %}{% endblock meta_page_title %}Khan Academie NL</title>
+    <title>{% block meta_page_title %}{% endblock meta_page_title %}Iktel NL</title>
     {% if video -%}
         <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
     {%- endif %}
@@ -69,11 +69,11 @@
 
     <meta property="fb:app_id" content="{{ App.facebook_app_id }}"/>
     <meta property="fb:admins" content="100004182250626"/>
-    <meta property="og:site_name" content="Khan Academie"/>
+    <meta property="og:site_name" content="Iktel"/>
     {% block meta_facebook_tags %}
         <meta property="og:url" content="http://www.facebook.com/khanacademie"/>
         <meta property="og:type" content="page"/>
-        <meta property="og:title" content="Khan Academie"/>
+        <meta property="og:title" content="Iktel"/>
         <meta property="og:description"
               content="Leer wat je wil, wanneer je het wil en in je eigen tempo. En ook nog eens gratis."/>
         <meta property="og:image" content="http://www.khanacademie.nl/images/khan-logo-header.png"/>
@@ -81,7 +81,7 @@
     {% endblock meta_facebook_tags %}
 
     {# Google+ -#}
-    <meta itemprop="name" content="Khan Academie">
+    <meta itemprop="name" content="Iktel">
     <meta itemprop="description" content="Kijk. Oefen. Leer van alles.">
     <meta itemprop="image" content="/images/khan-logo-vertical-transparent.png">
     {# End Google+ -#}
@@ -199,7 +199,7 @@
     		padding: 5px 0px;
     	}
     </style>
-    <div id="nieuw-naam">Dankzij jullie stemmen hebben we een nieuwe naam: Ik Tel! We zijn druk bezig de site en social media te veranderen =)</div>
+    <div id="nieuw-naam">Dankzij jullie stemmen hebben we een nieuwe naam: Iktel! We zijn druk bezig de site en social media te veranderen =)</div>
     <div id="page-container">
         <div id="page-container-inner">
             {# Facebook connect root #}
