--- a/templates/reportissue_template.html
+++ b/templates/reportissue_template.html
@@ -45,6 +45,6 @@ function submitForm(value)
         Wanneer wij denken dat we het probleem hebben opgelost zul je een e-mail ontvangen en je zult zelf het verschil zien
         bij de volgende keer dat we de site upgraden.  
         </p>
-        <p><em>Hartelijk dank dat je de tijd neemt om ons te helpen met het verbeteren van de Khan Academie!</em></p>
+        <p><em>Hartelijk dank dat je de tijd neemt om ons te helpen met het verbeteren van de Iktel!</em></p>
 </article>
 {% endblock pagecontent %}
