--- a/templates/viewbadges.html
+++ b/templates/viewbadges.html
@@ -31,7 +31,7 @@
             </figcaption>
         </figure>
     <div class="badge-hook info-box">
-        <p class="badge-hook">Dit is slechts &#233;&#233;n van de <a title="really, more like a billionty">meer dan honderd </a> badges die je kunt verdienen bij de Khan Academie.
+        <p class="badge-hook">Dit is slechts &#233;&#233;n van de <a title="really, more like a billionty">meer dan honderd </a> badges die je kunt verdienen bij de Iktel.
         {% if logged_in %}
         <p class="badge-hook">Begin <a href="/exercisedashboard">met een opgave</a> of <a href="/#browse">bekijk een video</a> en verdien er zelf ook &#233;&#233;n</p>
         {% else %}
@@ -65,7 +65,7 @@
             </td>
             <td style="text-align:center;">
                 <img src="/images/badges/eclipse-small.png" /><br/>
-                <strong>Zwarte Gat</strong> badges zijn legendarisch en onbekend. Dit is de meest prestigieuze badge die je kunt verdienen bij de Khan Academie .
+                <strong>Zwarte Gat</strong> badges zijn legendarisch en onbekend. Dit is de meest prestigieuze badge die je kunt verdienen bij de Iktel.
             </td>
             <td style="text-align:center;">
                 <img src="/images/badges/master-challenge-blue-small.png" /><br/>
