--- a/templates/coach_resources/toolkit_content/index.html
+++ b/templates/coach_resources/toolkit_content/index.html
@@ -7,10 +7,10 @@
 
     <p class="lead">Wij willen blijven leren van inspirerende leraren, coaches en leerlingen.</p>
 		
-	<p>Vanaf september 2012 werken wij samen met scholen die de Khan Academie in de klas gebruiken. Door deze samenwerkingsverbanden komen we meer te weten hoe de toolkit in de klas wordt gebruikt en hoe wij de Khan Academie kunnen verbeteren.</p>
+	<p>Vanaf september 2012 werken wij samen met scholen die de Iktel in de klas gebruiken. Door deze samenwerkingsverbanden komen we meer te weten hoe de toolkit in de klas wordt gebruikt en hoe wij de Iktel kunnen verbeteren.</p>
 	<p>Allereerst, kom te weten hoe Salman Khan denkt over het mengen van digitaal en fysiek leren:</p>
 	<iframe width="560" height="315" src="http://www.youtube.com/embed/0OtSs2xEpzY" frameborder="0" allowfullscreen></iframe>
-	<p><strong>Let op:</strong> Wij werken nog aan onze toolkit. Wij ontvangen graag <a href="http://www.khanacademie.nl/reportissue?type=Defect&issue_labels=">jouw feedback</a> over a) hoe wij de Khan Academie kunnen verbeteren en  b) welke gereedschappen jij goed kunt gebruiken. Daar staat tegenover, dat wij jou dankbaar zijn :)</p>
+	<p><strong>Let op:</strong> Wij werken nog aan onze toolkit. Wij ontvangen graag <a href="http://www.khanacademie.nl/reportissue?type=Defect&issue_labels=">jouw feedback</a> over a) hoe wij de Iktel kunnen verbeteren en  b) welke gereedschappen jij goed kunt gebruiken. Daar staat tegenover, dat wij jou dankbaar zijn :)</p>
 
 	<p><a href="{{base_url}}/how-to-use-this-toolkit" class="call-to-action simple-button green">Volgende: Hoe gebruik ik de gereedschapskist? →</a></p>
 
