--- a/templates/gebruiksvoorwaarden.html
+++ b/templates/gebruiksvoorwaarden.html
@@ -19,9 +19,9 @@
 		<p>
 		Welkom bij www.khanacademie.nl (hierna: de Website) en hartelijk dank voor je bezoek. Door het bezoeken en gebruiken van de Website ga je akkoord met de volgende algemene gebruiksvoorwaarden. Deze zijn bedoeld om ervoor te zorgen dat de Website voor iedereen werkt.</p>
 
-		<p>Khan Academie geïnspireerd op Khan Academy.</p>
+		<p>Iktel geïnspireerd op Khan Academy.</p>
 
-		<p>De Website is een initiatief van Khan Academie en is geïnspireerd op- en gelanceerd met toestemming van www.khanacademy.org, maar maakt hier geen deel vanuit. De op deze Website opgenomen faciliteiten zoals de oefeningen en video's, informatie, nieuws, gegevens en andere informatie op de Website is samengesteld door de Khan Academie en haar vrijwilligers.</p>
+		<p>De Website is een initiatief van Iktel en is geïnspireerd op- en gelanceerd met toestemming van www.khanacademy.org, maar maakt hier geen deel vanuit. De op deze Website opgenomen faciliteiten zoals de oefeningen en video's, informatie, nieuws, gegevens en andere informatie op de Website is samengesteld door de Iktel en haar vrijwilligers.</p>
 
 		<h6>Voorwaarden toegang</h6>
         <div class="info-list"><p>
@@ -29,7 +29,7 @@
 				<li>
 					Toegang tot deze Website, faciliteiten en informatie wordt verleend onder de voorwaarden van hetgeen in dit bezoekers regelement is opgenomen. Bezoekers zijn geen vergoeding verschuldigd voor de diensten die op deze Website beschikbaar worden gesteld, tenzij uitdrukkelijk anders is vermeld.
 				</li>
-			    <li> Je kunt inloggen op de Website met een Google- of Facebook account. Door in te loggen op de Website via Google en Facebook, ga je akkoord met de  gebruiksvoorwaarden van deze partijen. Khan Academie is niet verantwoordelijk voor de interactie die tussen jou en Google of Facebook plaatstvindt.  
+			    <li> Je kunt inloggen op de Website met een Google- of Facebook account. Door in te loggen op de Website via Google en Facebook, ga je akkoord met de  gebruiksvoorwaarden van deze partijen. Iktel is niet verantwoordelijk voor de interactie die tussen jou en Google of Facebook plaatstvindt.  
 			    </li>	
 			</ol>
         </div></p>
@@ -42,10 +42,10 @@
 		<div><p>
 			<ol style="list-style-position:inside">
 				<li>
-					De informatie op de Website is continu aan wijziging onderhevig en deels afkomstig van derden, Khan Academie betracht de grootst mogelijke zorgvuldigheid in de samenstelling van de informatie, maar garandeert niet dat de informatie compleet en/of accuraat is, noch aanvaardt Khan Academie enige aansprakelijkheid voor directe of indirecte schade welke is ontstaan door gebruikmaking van de informatie, behoudens opzet of bewuste roekeloosheid van Khan Academie.
+					De informatie op de Website is continu aan wijziging onderhevig en deels afkomstig van derden, Iktel betracht de grootst mogelijke zorgvuldigheid in de samenstelling van de informatie, maar garandeert niet dat de informatie compleet en/of accuraat is, noch aanvaardt Iktel enige aansprakelijkheid voor directe of indirecte schade welke is ontstaan door gebruikmaking van de informatie, behoudens opzet of bewuste roekeloosheid van Iktel.
 			    </li>
 			    <li>
-					Khan Academie behoudt zich tevens het recht voor deze gebruiksvoorwaarden te wijzigen. Wanneer wij de gebruiksvoorwaarden wijzigen zullen we je hierover via de blog op de Website informeren.
+					Iktel behoudt zich tevens het recht voor deze gebruiksvoorwaarden te wijzigen. Wanneer wij de gebruiksvoorwaarden wijzigen zullen we je hierover via de blog op de Website informeren.
 				</li>
 			</ol>
 	    </div></p>
@@ -55,18 +55,18 @@
 		<p>De informatie wordt voor algemene onderwijsdoeleinden aan bezoekers beschikbaar gesteld, maar berust niet in zijn geheel op bestaande leerlijnen en is ook niet, in zijn geheel, gebaseerd op wetenschappelijk onderwijs. Elk besluit om gebruik te maken van de beschikbare informatie is een zelfstandig besluit van de bezoeker en behoort tot zijn eigen verantwoordelijkheid.</p>
 
 		<h6>Internet</h6>
-		<p>Khan Academie wijst bezoekers op deze Website op het feit dat het internet niet een geheel betrouwbare voorziening is voor de overbrenging van, en toegang tot informatie en dat zich op willekeurige momenten storingen, vertragingen en fouten kunnen voordoen. Khan Academie kan niet aansprakelijk gesteld worden voor directe of indirecte schade als gevolg van (tijdelijke) storingen, vertraging of fouten op de Website, alsmede voor enige vertraging of fouten in het verzenden of ontvangen van berichten, waaronder mededelingen en instructies  door middel van de Website.</p>
+		<p>Iktel wijst bezoekers op deze Website op het feit dat het internet niet een geheel betrouwbare voorziening is voor de overbrenging van, en toegang tot informatie en dat zich op willekeurige momenten storingen, vertragingen en fouten kunnen voordoen. Iktel kan niet aansprakelijk gesteld worden voor directe of indirecte schade als gevolg van (tijdelijke) storingen, vertraging of fouten op de Website, alsmede voor enige vertraging of fouten in het verzenden of ontvangen van berichten, waaronder mededelingen en instructies  door middel van de Website.</p>
 
 		<h6>Intellectuele eigendomsrechten</h6>
 
-		<p>De rechten op de Website en de informatie die daarop beschikbaar wordt gesteld behoort toe aan Khan Academie en/of haar toeleveranciers en zijn beschermd op basis van het auteursrecht en andere intellectuele eigendomsrechten. Behoudens voor persoonlijk en niet-commercieel gebruik mag de informatie en/of andere delen van de Website niet worden verveelvoudigd, opgeslagen in een geautomatiseerd gegevensbestand, of openbaar gemaakt, in enige vorm of op enige wijze, hetzij elektronisch, hetzij mechanisch, door fotokopieën, opnamen of enige andere manier, zonder voorafgaande schriftelijke toestemming van Khan Academie. In het bijzonder is het bezoeker uitdrukkelijk niet toegestaan Informatie geheel of gedeeltelijk door te zenden naar newsgroups, mailing lists, electronic bulletin boards, chat boxes of daarmee vergelijkbare discussiefora zonder voorafgaande schriftelijke toestemming van Khan Academie. Onmiskenbaar onrechtmatig materiaal wordt na melding van de Website verwijderd.</p>
+		<p>De rechten op de Website en de informatie die daarop beschikbaar wordt gesteld behoort toe aan Iktel en/of haar toeleveranciers en zijn beschermd op basis van het auteursrecht en andere intellectuele eigendomsrechten. Behoudens voor persoonlijk en niet-commercieel gebruik mag de informatie en/of andere delen van de Website niet worden verveelvoudigd, opgeslagen in een geautomatiseerd gegevensbestand, of openbaar gemaakt, in enige vorm of op enige wijze, hetzij elektronisch, hetzij mechanisch, door fotokopieën, opnamen of enige andere manier, zonder voorafgaande schriftelijke toestemming van Iktel. In het bijzonder is het bezoeker uitdrukkelijk niet toegestaan Informatie geheel of gedeeltelijk door te zenden naar newsgroups, mailing lists, electronic bulletin boards, chat boxes of daarmee vergelijkbare discussiefora zonder voorafgaande schriftelijke toestemming van Iktel. Onmiskenbaar onrechtmatig materiaal wordt na melding van de Website verwijderd.</p>
 
 		<h6>Inzendingen</h6>
-		<p>Khan Academie heeft het recht inzendingen niet te plaatsen, te verwijderen, dan wel aan te passen, indien deze lasterlijk, obsceen of bedreigend van aard zijn. Tevens behoud Khan Academie zich het recht voor filmpjes en oefeningen van de Website te verwijderen wanneer zij van mening zou zijn dat deze van slechte kwaliteit zijn, verouderd zijn, of op enige andere wijze ongeschikt worden bevonden voor de Website. Onmiskenbaar onrechtmatig materiaal wordt na melding verwijderd.</p>
+		<p>Iktel heeft het recht inzendingen niet te plaatsen, te verwijderen, dan wel aan te passen, indien deze lasterlijk, obsceen of bedreigend van aard zijn. Tevens behoud Iktel zich het recht voor filmpjes en oefeningen van de Website te verwijderen wanneer zij van mening zou zijn dat deze van slechte kwaliteit zijn, verouderd zijn, of op enige andere wijze ongeschikt worden bevonden voor de Website. Onmiskenbaar onrechtmatig materiaal wordt na melding verwijderd.</p>
 
 		<h6>Beëindiging gebruik</h6>
 
-		<p>Khan Academie biedt een gratis online-dienst. Khan Academie behoudt zich het recht voor op enig moment uw registratie op te heffen indien zij daar aanleiding toe wordt gezien. Khan Academie kan hier op geen enkele manier aansprakelijk voor worden gehouden tenzij anders is overeengekomen.</p>
+		<p>Iktel biedt een gratis online-dienst. Iktel behoudt zich het recht voor op enig moment uw registratie op te heffen indien zij daar aanleiding toe wordt gezien. Iktel kan hier op geen enkele manier aansprakelijk voor worden gehouden tenzij anders is overeengekomen.</p>
 
 		<h6>Algemeen</h6>
 
