--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -57,7 +57,7 @@
 
                     </div>
                     <h1>
-                        Welkom bij Khan Academie
+                        Welkom bij Iktel
                     </h1>
 
                     <p>
