Delete old logo and old name

--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -212,11 +212,14 @@
             <div id="top-header">
                 <div class="top-header-links">
                     <div id="navbar" class="overflow overflow-white"> {# class="overflow" #}
+                        <!-- Old logo and old name
                         <a id="logo" href="/" title="Naar de homepage!" data-tag="Header">
                             {# <img src="/images/logos/khan-academie2.png"> #}
                         </a>
                         <a id="stichting" href="http://www.perceptum.nl/blog/2013/06/20/geef-je-mening-voor-de-nieuwe-naam-van-de-khan-academie/"> </a>
+                         -->
                     <span class="page_links" id="page_auth">
+               
                         <span id="goals-container"></span>
                                 <span id="user-info" class="badge-target">
                                 {% if user_data and not user_data.is_pre_phantom %}
